src/main/java/com/example/keepstock/error/exception/ImageUploadException.java
package com.example.keepstock.error.exception;

public class ImageUploadException extends RuntimeException {
    public ImageUploadException(String message) {
        super(message);
    }
}